@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.63 2005/01/31 01:55:02 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.64 2005/02/01 02:40:06 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  31 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Changed vertical spacing for install steps. Removed "Install" activation
+  if profile is loaded.
 
   30 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Deleting and recreating swap doesn't cause nastiness anymore. Switched
